tests/invalid/test_type_spec.err_exp
test_type_spec.m:011: Error: predicate [38;5;87m`type_spec1'/1[39;49m [38;5;203mhas no clauses.[39;49m
test_type_spec.m:013: In `:- pragma type_spec' declaration for predicate
test_type_spec.m:013:   `test_type_spec.type_spec1'/1:
test_type_spec.m:013:   error: variable [38;5;87m`U'[39;49m [38;5;203mdoes not occur[39;49m in the `:- pred'
test_type_spec.m:013:   declaration.
test_type_spec.m:014: In `:- pragma type_spec' declaration for predicate
test_type_spec.m:014:   [38;5;87m`type_spec1'/1:[39;49m
test_type_spec.m:014:   error: mode annotation specifies [38;5;203mundeclared mode[39;49m
test_type_spec.m:014:   [38;5;203m`type_spec1(out)'.[39;49m
test_type_spec.m:014:   The declared mode for this predicate is:
test_type_spec.m:014:     :- mode type_spec1(in) is semidet.
test_type_spec.m:016: Error: `:- pragma type_spec' declaration for
test_type_spec.m:016:   [38;5;87m`type_spec1'/2[39;49m [38;5;203mwithout[39;49m a corresponding `:- pred' or
test_type_spec.m:016:   `:- func' declaration.
test_type_spec.m:016:   `type_spec1' [38;5;226mdoes exist[39;49m with arity [38;5;40m1.[39;49m
test_type_spec.m:024: Error: predicate [38;5;87m`type_spec2'/1[39;49m [38;5;203mhas no clauses.[39;49m
test_type_spec.m:026: In `:- pragma type_spec' declaration for predicate
test_type_spec.m:026:   `test_type_spec.type_spec2'/1:
test_type_spec.m:026:   error: the substitution includes the [38;5;203mexistentially[39;49m
test_type_spec.m:026:   [38;5;203mquantified type[39;49m variable [38;5;87m`U'.[39;49m
test_type_spec.m:028: In `:- pragma type_spec' declaration for predicate
test_type_spec.m:028:   `test_type_spec.type_spec2'/1:
test_type_spec.m:028:   error: variable [38;5;87m`U'[39;49m does not occur [38;5;203mon both sides of the[39;49m
test_type_spec.m:028:   [38;5;203msubstitution.[39;49m
test_type_spec.m:030: In `:- pragma type_spec' declaration for predicate
test_type_spec.m:030:   `test_type_spec.type_spec2'/1:
test_type_spec.m:030:   error: variable [38;5;87m`U'[39;49m [38;5;203mhas multiple replacement types.[39;49m
